--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
     <pre>bower install angular-timezone-selector</pre>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/mishguruorg/angular-timezone-selector">Angular-timezone-selector</a> is maintained by <a href="http://mish.guru">mish guru</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/mishguruorg/angular-timezone-selector">Angular-timezone-selector</a> was created with &#9829; by <a class="logo" href="http://mish.guru">mish guru</a>.</span>
       </footer>
-
     </section>
 
   <script type="text/javascript" src='bower_components/jquery/dist/jquery.min.js'></script>
