Added view on github footer

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mishguruorg/angular-timezone-selector">Angular-timezone-selector</a> was created with &#9829; by <a class="logo" href="http://mish.guru">mish guru</a>.</span>
       </footer>
+      <span class="site-footer-credits"><a href="https://github.com/mishguruorg/angular-timezone-selector">View on Github</a>.</span>
+      </footer>
     </section>
 
   <script type="text/javascript" src='bower_components/jquery/dist/jquery.min.js'></script>
