--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <code ng-non-bindable>
         &lt;p&gt;Selected timezone: &lt;b&gt;&#123;&#123; timezone &#125;&#125;&lt;b&gt;&lt;/p&gt;
         &lt;timezone-selector ng-model=&quot;timezone&quot;&#47;&gt;
-        </code
+        </code>
       </pre>
     
 
